--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,15 +13,38 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative; /* incluido para dar o efeito de cabeçalho fixo */
         }
 
         td, th {
             border: 1px solid black;
+            padding: 10px;
+        }
+
+                caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
         thead, tfoot {
             background-color: gray;
             color: white;
         }
+
+        thead > tr > th {
+            position: sticky; /* colável, grudável */
+            top: -1px; /* segurar o sticky nessa posição - com 0 ficou aparecendo parte da tabela quando rolava */
+            background-color: gray; /* teve que incluir pois com o top só os títulos ficavam fixos */
+        } /* cabeçalho (th) que está dentro da linha (tr) da cabeça - cabeçalho fixo */
+
+        tbody > tr:nth-child(2n-1) {
+            background-color: rgb(248, 215, 211);
+        } /* no lugar de 2n-1, pode ser odd para linhas ímpares */
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
+        } /* efeito zebrado de duas em duas linhas (tr) */ /* no lugar de 2n, pode ser even para linhas pares */
         .num {
             text-align: right;
         }
@@ -34,6 +57,7 @@
     <h1>Uso de tabelas grandes</h1>
     <!-- Anatomia para Tebelas Grandes
     TABLE
+        CAPTION (legenda)
         THEAD
             TR, TD, TH
         TBODY
@@ -42,42 +66,153 @@
             TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
-                <th>% da pop. total</th>
+                <th scope="col">Estado</th><!-- "scope" indica que estado é titulo da coluna "col" -->
+                <th scope="col" style="width: 120px;">População</th>
+                <th scope="col" style="width: 120px;">% da pop. total</th> <!-- configuração pontual de estilo para largura da coluna -->
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td class="num">46 649 132</td>
+                <td class="num">46.649.132</td>
                 <td class="perc">21,9</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td class="num">21 411 923</td>
+                <td class="num">21.411.923</td>
                 <td class="perc">10,1</td>
             </tr>
             <tr>
                 <td>Rio de Janeiro</td>
-                <td class="num">17 463 349</td>
+                <td class="num">17.463.349</td>
                 <td class="perc">8,2</td>
             </tr>
             <tr>
                 <td>Bahia</td>
-                <td class="num">14 985 284</td>
+                <td class="num">14.985.284</td>
                 <td class="perc">7,1</td>
             </tr>
             <tr>
                 <td>Paraná</td>
-                <td class="num">11 597 484</td>
+                <td class="num">11.597.484</td>
                 <td class="perc">5,4</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11.466.630</td>
+                <td class="perc">5,4</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.674.793</td>
+                <td class="perc">4,5</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9.240.580</td>
+                <td class="perc">4,3</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.777.124</td>
+                <td class="perc">4,1</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7.338.473</td>
+                <td class="perc">3,4</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7.206.589</td>
+                <td class="perc">3,4</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7.153.262</td>
+                <td class="perc">3,4</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4.269.995</td>
+                <td class="perc">2,0</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4.108.508</td>
+                <td class="perc">1,9</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4.059.905</td>
+                <td class="perc">1,9</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3.567.234</td>
+                <td class="perc">1,7</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3.560.903</td>
+                <td class="perc">1,7</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3.365.351</td>
+                <td class="perc">1,6</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3.289.290</td>
+                <td class="perc">1,6</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3.094.325</td>
+                <td class="perc">1,4</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2.839.188</td>
+                <td class="perc">1,3</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2.068.474</td>
+                <td class="perc">1,1</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1.815.278</td>
+                <td class="perc">0,8</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1.607.363</td>
+                <td class="perc">0,7</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">906.876</td>
+                <td class="perc">0,4</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">877.613</td>
+                <td class="perc">0,4</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">652.713</td>
+                <td class="perc">0,3</td>
             </tr>
         </tbody>
         <tfoot>
-            <th>Total de Habitantes</th> <!-- cabeçalho -->
+            <th scope="row">Total de Habitantes</th> <!-- cabeçalho -->
             <td class="num"><strong>210.147.125</strong></td> <!-- dado -->
             <td class="perc"><strong>100,0</strong></td> <!-- dado -->
         </tfoot>
