--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -24,7 +24,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ipsam quos et natus cumque vitae possimus neque maxime nulla animi magni praesentium ad sapiente, earum quas? Omnis nesciunt rem quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima inventore dolorem, illo delectus, dolor, accusantium quod expedita magnam atque hic optio facere vel dicta consectetur nisi laudantium quos? Deserunt, vel!</p>
 
-    <iframe src="pag001.html" frameborder="0" height="300" width="500">
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="300" width="500">
 
         <p>Infelizmente seu navegador não é compatível com isso!</p>
 
