--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -12,7 +12,7 @@
         iframe {
             width: 300px;
             display: block;
-            margin: auto;
+            margin: auto; <!--Não centraliza se não tiver o display block acompanhando-->
         }
     </style>
 </head>
