--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -10,7 +10,11 @@
     <form action="cadastro.php" method="get" autocomplete="on">
     <p>
         <label for="inome">Nome</label>
-        <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name" required>
+        <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome" autocomplete="name" required>
+    </p>
+    <p>
+        <label for="isobrenome">Sobrenome</label>
+        <input type="text" name="sobrenome" id="isobrenome" required maxlength="30" placeholder="Sobrenome" autocomplete="sobrenome" required>
     </p>
     <p>
         <label for="imedia">Média</label>
