--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -10,12 +10,12 @@
     <form action="cadastro.php" method="get" autocomplete="on">
     <p>
         <label for="inome">Nome</label>
-        <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome" autocomplete="name" required>
+        <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name" required>
     </p>
-    <p>
+    <!-- <p> 
         <label for="isobrenome">Sobrenome</label>
         <input type="text" name="sobrenome" id="isobrenome" required maxlength="30" placeholder="Sobrenome" autocomplete="sobrenome" required>
-    </p>
+    </p>-->
     <p>
         <label for="imedia">Média</label>
         <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" required>
