--- a/exercicios/ex025/form006.html
+++ b/exercicios/ex025/form006.html
@@ -16,10 +16,11 @@
             <label for="inivel">Nível de Satisfação:</label>
             <input type="range" name="nivel" id="inivel" min="1" max="10">
         </p>
-        <p>
+        <p> 
             <label for="ifoto">Foto do Perfil: </label>
             <input type="file" name="foto" id="ifoto">
         </p>
+        <!-- Para enviar fotos ou arquivos deve-se usar o method posto na criação do formulário -->
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
